fixes to sidebar spacing

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -72,7 +72,7 @@ h2 {
   margin-bottom: 5rem;
   margin-right: 1rem;
   border: 0.25rem solid lightgray;
-  padding: 0rem rem 1rem 1rem;
+  padding: 0rem 0rem 1rem 1rem;
   width: 28%;
   height: 44rem;
   text-align: center;
